# frequency-guided-jpeg-recompression-scheduling

./: .gitattributes  .gitignore  ARTIFACTS.md  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  SECURITY.md  environment.yml  pyproject.toml  requirements-ci.txt  requirements.txt  resources_manifest.yml
.github/workflows/: ci.yml
data/: README.md
data/derived/: frequency_full8_summary.json  full_audit_summary.json  summary.json
paper/: README.md  manuscript_draft.md
results/: README.md
results/data/: figure_metrics.csv  frequency_metrics.csv  full_audit_summary.json  metrics.csv
results/figures/: figure1_mechanism_schematic.mmd
results/tables/: table_frequency_diagnostics.tex  table_full_four_schedule_asr.tex  table_i_prediction_rules.tex  table_ii.tex  table_iii.tex  table_iv.tex  table_jpeg_aware_boundary.tex  (+3 more)
scripts/: __init__.py  benchmark_runtime.py  check_no_secrets.py  check_resources.py  make_figures.py  make_tables.py  prepare_resources.py  render_manuscript.py  run_experiments.py  run_full_pipeline.sh  verify_resources.py
tests/: conftest.py  test_attacks.py  test_centroid_closure.py  test_data.py  test_diffjpeg_adapter.py  test_estimator.py  test_experiments.py  test_frequency.py  test_github_repo_delivery.py  test_icsip_paper_delivery.py  test_imports.py  test_jpeg.py  test_manuscript_rendering.py  test_manuscript_revision_quality.py  test_metrics.py  test_models.py  test_paths.py  test_plotting.py  test_references_and_symbols.py  test_reproducible_paper_assets.py  test_runtime_benchmark.py  test_schedules.py  test_secret_scan.py
(+14 files in other folders)
